--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <head>
         <title>IO | My portfolio</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href='/assets/css/main.css'/>
+        <link rel="stylesheet" href='main.css'/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-		<script src="/assets/javascript/main.js"></script>
-		<script src="/assets/javascript/snow.js"></script>
+		<script src="main.js"></script>
+		<script src="snow.js"></script>
 		<script src="https://kit.fontawesome.com/d0514f1901.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta property="og:type" content="website">
@@ -81,7 +81,7 @@
 		    			<p>Find all my experiences, including the position held, the work done and the resources used.</p>
 		    		</div>
 		    		<div id="projects">
-		    			<img class="shadow" src="/assets/images/shadow.svg" width="250" height="250">
+		    			<img class="shadow" src="shadow.svg" width="250" height="250">
 		    			<div class="proj">
 		    				<div class="proj-info">
 		    					<h3>pycoin.space
