--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		    					<i id="tiktok" class="fa-brands fa-tiktok"></i> 
 		    				</a>
 							<span class="linkinfo">
-								TiktTok
+								TikTok
 							</span>
 						</div>
 		    		</div>
