--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 							</div>
 							<div class="row">
 								<span>Languages I know:</span>  
-								<span><strong>Python</strong> and <strong>Javascript</strong></span>
+								<span><strong>Python</strong>, <strong>c#</strong> and <strong>Javascript</strong></span>
 							</div>
 						</div>
 					</div>
